[feat] append health route :sparkles: (#23)
